[package]
name = "rockhopper"
description = "metapackage generator"
version = "0.0.21"
edition = "2024"
authors = ["Andrew Pennebaker <n4jm4@pm.me>"]
license = "0BSD"
repository = "https://github.com/mcandre/rockhopper"
exclude = [
    "docker",
    "examples",
]

[dependencies]
die = "0.2.0"
getopts = "0.2.24"
glob = "0.3.3"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
walkdir = "2.5.0"

[lib]
name = "rockhopper"

[[bin]]
name = "rockhopper"
path = "src/rockhopper.rs"

[profile.release]
strip = "symbols"
