[package]
name = "raygun"
description = "Illudium Q-36 explosive space modulator"
version = "0.0.1"
edition = "2024"
authors = ["Andrew Pennebaker <n4jm4@pm.me>"]
license = "0BSD"
repository = "https://github.com/mcandre/rockhopper"

[[bin]]
name = "raygun"
path = "src/raygun.rs"

[profile.release]
strip = "symbols"
